--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -249,7 +249,7 @@
 <!-- edit category modal  -->
 <ng-template #editCategory let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Edit Category</h4>
+    <h4 class="modal-title">Edit Category</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -283,7 +283,7 @@
 <!-- edit tag modal  -->
 <ng-template #editTag let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Edit Tag</h4>
+    <h4 class="modal-title">Edit Tag</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
