--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -115,7 +115,7 @@
 <!-- add division modal  -->
 <ng-template #addDivision let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">{{type=='add'?'Create New':'Edit'}} Division</h4>
+    <h4 class="modal-title">{{type=='add'?'Create New':'Edit'}} Division</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -150,7 +150,7 @@
 <!-- update groups modal -->
 <ng-template #updateGroups let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Update Groups</h4>
+    <h4 class="modal-title">Update Groups</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -171,7 +171,7 @@
 <!-- promote member modal -->
 <ng-template #promoteMember let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Promote Division Member</h4>
+    <h4 class="modal-title">Promote Division Member</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
