--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -241,7 +241,7 @@
 <!-- create new group -->
 <ng-template #grpModal let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">{{isEdit?"Edit":"Create New"}} Group</h4>
+    <h4 class="modal-title">{{isEdit?"Edit":"Create New"}} Group</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
