--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -338,7 +338,7 @@
 <!-- send invitation modal  -->
 <ng-template #sendInvitation let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Send Invitations</h4>
+    <h4 class="modal-title">Send Invitations</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -369,7 +369,7 @@
 <!-- User modal  -->
 <ng-template #usrModal let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">{{isEdit?'Edit':'Create New'}} User</h4>
+    <h4 class="modal-title">{{isEdit?'Edit':'Create New'}} User</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
