--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -77,7 +77,7 @@
             <div class="items">3 Items</div>
           </div>
           <div class="float-right">
-            <mat-checkbox></mat-checkbox>
+            <mat-checkbox (change)="selMe($event.checked, content.id)"></mat-checkbox>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
       <tbody *ngIf="contentArr.length > 0">
         <tr *ngFor="let content of contentArr">
           <td class="align-middle">
-            <mat-checkbox></mat-checkbox>
+            <mat-checkbox (change)="selMe($event.checked, content.id)"></mat-checkbox>
           </td>
           <td class="align-middle">
             <div class="d-flex">
@@ -143,7 +143,7 @@
 </div>
 
 <!-- fixed div on selecting a collection -->
-<div class="row mx-auto fixed-bottom px-3" style="width: 90%; background-color: #fff; height: 50px;">
+<div class="row mx-auto fixed-bottom px-3" style="width: 90%; background-color: #fff; height: 50px;" *ngIf="showBotDiv">
   <div class="selected-items text-secondary align-self-center">1 item selected</div>
   <div class="mr-1 ml-3 align-self-center">|</div>
   <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
