show workspace list in add content modal

--- a/src/app/web-app/resource/collection/collection-list/collection-list.component.html
+++ b/src/app/web-app/resource/collection/collection-list/collection-list.component.html
@@ -28,7 +28,7 @@
             <div class="float-left text-secondary d-flex">
               <div class="date">{{colctn.updatedDate.split('T')[0]}}</div>
               <div class="mx-2">l</div>
-              <!-- <div class="items">{{colctn.collectionContents.length}} Item(s)</div> -->
+              <div class="items">0 Item(s)</div>
             </div>
             <div class="float-right">
               <mat-checkbox (change)="selMe($event.checked, colctn.id)"></mat-checkbox>
