--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -34,7 +34,7 @@
       </div>
       <i class="fa mr-4 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}"
         (click)="view = !view;"></i>
-      <button class="btn btn-primary" (click)="openModal(addResource)">Add Resource</button>
+      <button class="btn btn-primary" (click)="addResourceModal(addResource)">Add Resource</button>
     </div>
   </h3>
   <div class="mt-2 row my-files" *ngIf="view && contentArr.length > 0">
@@ -74,7 +74,7 @@
           <div class="float-left text-secondary d-flex">
             <div class="date">{{content.updatedDate.split('T')[0]}}</div>
             <div class="mx-2">l</div>
-            <div class="items">3 Items</div>
+            <div class="items">0 Items</div>
           </div>
           <div class="float-right">
             <mat-checkbox (change)="selMe($event.checked, content.id)"></mat-checkbox>
@@ -201,13 +201,13 @@
       </mat-form-field>
     </div>
     <!-- experiences -->
-    <div class="text-secondary font-weight-bold my-2">Experiences</div>
-    <div class="exp d-flex border-bottom py-2 dark-bg-hover">
+    <div class="text-secondary font-weight-bold my-2">Workspaces</div>
+    <div class="exp d-flex border-bottom p-2 dark-bg-hover" *ngFor="let workspc of workspcArr">
       <div class="icon align-self-center mr-2">
         <img src="assets/images/discription.png" style="max-height:50px;">
       </div>
       <div class="name align-self-center">
-        English
+        {{workspc.name}}
       </div>
       <div class="arrow align-self-center ml-auto mr-3">
         <i class="fa fa-angle-right"></i>
