merge, dismodel spelling change, likes,size colmns in cntnt list, srow infor changes in tags list, add sel-row class in listings, add cmnt in local after api succ, fetch usrname from usr data,comment inerface added

--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -190,7 +190,7 @@
             </tr>
           </thead>
           <tbody *ngIf="!loading && ancmnts.length > 0">
-            <tr *ngFor="let ancmnt of ancmnts" (click)="toggleInfo(ancmnt)">
+            <tr *ngFor="let ancmnt of ancmnts" (click)="toggleInfo(ancmnt)" [ngClass]="{'sel-row':(rowInfo.id === ancmnt.id)}">
               <td *ngFor="let col of cols">
                 <span [ngSwitch]="col.k">
                   <span *ngSwitchCase="'sendToGroup'">
